Fix click events not bubbling on iOS

--- a/css/responsive.styl
+++ b/css/responsive.styl
@@ -1,5 +1,10 @@
 /** Rail Announcements Generator. By Roy Curtis, MIT license, 2018 */
 
+// Workaround for click events not bubbling in iOS
+// http://gravitydept.com/blog/js-click-event-bubbling-on-ios
+*
+  cursor pointer !important
+
 body
   background $bgDark
 
